package com.example.designpattern.decorator

/**
 * TODO 请添加说明
 *
 * @author zhujie
 * @date 2019/8/22
 * @time 18:06
 */
class XiaoMiPhone : Phone {
    override fun show() {
        println("小米手机")
    }
}